{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "d2b472bb-c2aa-4b44-ad38-8b274536999a",
            "actions": [
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "c78d1b0f-2927-42a5-ac9e-5ebae36b41ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "a6ffeaf1-ecc5-46f5-a8a8-9643556e66f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e976d416-dbe1-43c2-9db3-7e1e3f50f64e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad3285a6-2622-49d3-bf09-55d819d269ea",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}